# package-with-extras

./: pyproject.toml
package_with_extras/: __init__.py
