[tool.poetry]
name = "package-with-extras"
version = "0.1.0"
description = ""
authors = ["Hannah Rittich <hrittich@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpie = { version = "^3.2.1", optional = true }

[tool.poetry.extras]
httpie = ["httpie"]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
package-with-extras = 'package_with_extras:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
